--- a/styles/reset.css
+++ b/styles/reset.css
@@ -15,7 +15,7 @@ time,s,del,code,mark,img {
     line-height: 1.5; margin: 0; padding: 0;
     color: #fff;
 }
-a {color:#000; text-decoration: none;}
+a {color:#fff; text-decoration: none;}
 ul,ol,li {list-style: none;}
 table, tr, td ,th {border-collapse: collapse;}
 th {text-align: left;}
