--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,14 @@
-body,html {scroll-behavior: smooth;}
-/* 공통 */
-.profile, .project > div {
-    max-width: 1200px; margin: 0 auto;
-    border: 1px solid aqua;
+body{
+    background-color: #f5f5f5;
+    min-width: 1021px;
 }
-h1 {
-    font-family: "DM Serif Display", serif;
-    font-size: 10rem; font-weight: 600;
-    letter-spacing: 4px;
-    text-align: center; color: #fff;
-    text-transform: capitalize;
+body,html {scroll-behavior: smooth;}
+section {
+    width: 100vw;
+    height: 100vh;
+}
+* h1 {
+    font-family: "Tenor Sans", sans-serif;
 }
 /* 0. 고정메뉴 */
 nav {
@@ -20,145 +19,241 @@ nav {
 nav::after {
     content: ''; display: inline-block;
     width: 2.5px; height: 100px;
-    background: #fff;
+    background: #000;
     position: absolute;
     right: -20px; top: 15px;
 }
 nav a {
     display: block; text-align: right;
     padding: 10px 0;
-    color: #fff;
-}
-.bg {
-    background: url(../images/bg.jpg) center 40%;
-    background-size: cover;
+    color: #000;
 }
 /* 1. intro */
 .intro {
-    height: 100vh;
+    position: relative;
+    padding: 50px;
 }
-.intro .year {padding: 20px;}
-.intro .center {text-align: center; padding: 200px 0 0;}
-.intro .center h1 {}
-.intro .center .name {
-    font-size: 2rem;
-    transform: translateY(-50px);
+.intro h1 {
+    font-size: 6.25rem;
+    line-height: 1.0;
+    font-weight: 700;    
 }
-.intro .center .info {font-size: 1.2rem;}
+.intro .name {
+    font-size: 3.125rem;
+    font-weight: 700;
+    margin-top: 252px;
+}
+.intro .year {
+    position: absolute;
+    right: -40px; top: 50%;
+    transform: translateY(-50%) rotate(90deg);
+    
+}
+.intro .year p {
+    font-size: 6.25rem;
+    font-weight: 700;
+
+}
+.intro .contact {
+    padding-top: 200px;
+}
+.intro .contact h2 {
+    font-weight: 700;
+    font-size: 1.25rem;
+}
+.intro .contact p {
+    font-weight: 500;
+}
 /* 2. profile */
+.profile > div {}
 .profile {
-    height: 100vh;
     display: flex;
-    flex-flow: row-reverse;
+    max-width: 1212px;
+    margin: 0 auto;
+    justify-content: center;
 }
 .profile .photo {
-    width: 200px; height: 200px;
-    overflow: hidden; border-radius: 15px;
-    margin-left: 20px;
+    width: 442px;
+    margin-right: 100px;
 }
 .profile .photo img {width: 100%;}
-.profile .txt {
-    background: rgba(255,255,255,0.4);
-    padding: 20px; border-radius: 15px;
-    height: max-content;
-    width: calc(100% - 220px);
-    display: grid;
-    grid-template-areas: 
-    'a b'
-    'c c';
-}
-.profile .txt .list:nth-child(1) {grid-area: a;}
-.profile .txt .list:nth-child(2) {grid-area: b;}
-.profile .txt .list:nth-child(3) {
-    grid-area: c;
+.photo p {
     margin-top: 20px;
+    font-size: 1.25rem;
 }
-.profile .txt .list * {color: #222;}
-.profile .txt .list h2 {
-    font-weight: 600; font-size: 1.3rem;
-    margin-bottom: 20px;
+.profile .list {
+    margin-left: 50px;
 }
-.profile .txt .list p {line-height: 2.5;}
-.profile .txt .list p em {font-weight: 600;}
-.profile .txt .list p span {color: #555;}
-/* 3. 프로젝트 */
-.project {
-    padding: 100px 0;
-    background: linear-gradient(180deg, #301dfd, #b2bbff, #301dfd);
+.profile .list h2 {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin : 20px 0;
 }
-/* 3-1. 앱 디자인 */
-.project .app {
+.profile .list p {
+    margin-bottom: 10px;
+}
+.profile .list .first p em {
+    font-weight: 500;
+    font-size: 1.25rem;
+    padding-right: 5px;
+}
+.profile .list .first p span {
+    color: #555;
+    font-weight: 500;
+}
+.profile .list .second {
     display: flex;
 }
-.project .app .thum {}
-.project .app .thum img {width: 100%;}
-.project .app .app_info {}
-/* 3-2. 웹 디자인 */
-.project .web {position: relative;}
-.project .web .swiper {max-width: 1000px;}
-.project .web .swiper-slide {display: flex;}
-.project .web div[class^=swiper-button] {color: #fff;}
-/* 3-3 sns */
-.project .sns {max-width: 1920px;}
-.project .sns .swiper-wrapper {transition-timing-function: linear;}/* 일정속도 */
-.project .sns .swiper-slide {align-self: center;}/* flex 내장 */
-.project .sns .swiper-slide img {width: 100%;}
-/* 3-4 배너 */
-.project .banner {display: flex; flex-flow: row wrap;}
-.project .banner p {width: calc(50% - 5px);}
-.project .banner p:nth-child(odd) {margin-right: 5px;}
-.project .banner p img {width: 100%;}
-/* 3-5 디테일 */
-.project .detail p {}
-.project .detail .swiper {height: 500px;}/* overflow:hidden 내장 */
-.project .detail .swiper-slide a {
-    position: relative;
-    display: block; height: 500px;
+.profile .list .second p {}
+.profile .list .second p:nth-child(2) {
+    margin-left: 50px;
 }
-.project .detail .swiper-slide a::after {
-    content: ''; display: inline-block;
-    height: 100px; width: 100%;
-    background: linear-gradient(360deg, #301dfd, transparent);
-    position: absolute; left: 0; bottom: 0; z-index: 999;
+.profile .list .second p em {
+    font-weight: 500;
+    font-size: 1.25rem;
 }
-.project .detail .swiper-slide img {width: 100%;}
-/* 상세 팝업 */
-.big_bg {
-    position: fixed; left: 0; top: 0; z-index: 999;
-    width: 100%; height: 100vh;
-    background: rgba(0,0,0,0.6);
+.profile .list .second p span {
+    color: #555;
+    font-weight: 500;
 }
-.big_bg .img {
-    max-width: 50vw; margin: 30px auto;
-    height: 90vh; overflow-y: auto; overflow-x: hidden;
+.profile .list h3 {
+    font-size: 1.25rem;
+    font-weight: 500;
 }
-.big_bg .img img {width: 100%;}
-/* 스크롤바 꾸미기 */
-.big_bg .img::-webkit-scrollbar {
-    background: #333;
-    width: 2px; height: 10px;
+.profile .list p {}
+.profile .list p span {
+    color: #555;
+    font-weight: 500;
 }
-.big_bg .img::-webkit-scrollbar-thumb {
-    background: #ff0;
+.profile .list .skill {
+    display: flex;
 }
-/* 반응형웹 1200, 800, 600 */
-@media screen and (max-width:1200px){
-    h1 {font-size:8rem;}
+.profile .list .skill p {
+    margin-right: 22px;
 }
-@media screen and (max-width:800px){
-    h1 {font-size:5rem;}
-    .profile .txt {
-        grid-template-areas: 
-        'a'
-        'b'
-        'c';
-    }
+.profile .list .skill p span {}
+/* 3. index */
+.index {}
+.index h1 {
+    font-size: 5rem;
 }
-@media screen and (max-width:600px){
-    h1 {font-size: 3rem;}
-    .profile {height: max-content;}
-    .profile .photo {display: none;}
-    .profile .txt {width: 100%;}
-    .project .app {flex-flow: column;}
-    .project .web .swiper-slide {flex-flow: column;}
+.index h2 {}
+.index ul {}
+.index ul li {}
+/* 4. 프로젝트 */
+.project_app,
+.project_web,
+.project_sns {
+    max-width: 1920px;
+}
+.project_app h1,
+.project_web h1, 
+.project_sns h1 {
+    text-align: center;
+    font-size: 5rem;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+/* 4-1 앱 */
+.project_app .app,
+.project_web .web {
+    display: flex;
+    max-width: 1520px;
+    margin: 0 auto;
+    align-items: center;
+}
+.thum {
+    width: 904px;
+}
+.thum img {width: 100%;}
+.app_info {
+    margin-left: 50px;
+}
+.info {margin-left: 129px;}
+.info p {
+    font-size: 1.075rem;
+    font-weight: 700;
+}
+.info h3 {
+    font-size: 1.875rem;
+    font-weight: 700;
+    margin-bottom: 57px;
+}
+.info .date {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.info ul {}
+.info ul li:nth-of-type(odd) {
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 2.8;
+} 
+.info ul li:nth-of-type(even) {
+    font-size: 1.475rem;
+    font-weight: 700;
+} 
+.link {
+    padding-top: 20px;
+}
+.link a {
+    border: 1px solid black;
+    display: inline-block;
+    padding: 10px 27.1px;
+    margin-right: 10px;
+    font-size: 1rem;
+    font-weight: 500;
+    background-color: none;
+    transition: background-color 0.5s ease, color 0.5s ease, border 0.5s;
+}
+.link a:hover {
+    background-color: #0077ED;
+    border: 1px solid #0077ED;
+    color: #fff;
+} 
+/* 4-2. 웹 */
+.project_web {
+    /* margin: 200px 0; */
+}
+.web {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.web1 .info,
+.web3 .info {
+    margin-right: 129px;
+    margin-left: 0;
+}
+.web2 .info,
+.web4 .info {
+    margin-left: 129px;
+    margin-right: 0;
+}
+/* sns디자인 */
+.sns .swiper-wrapper {transition-timing-function: linear;}/* 일정속도 */
+.sns .swiper-slide {align-self: center;}/* flex 내장 */
+.sns .swiper-slide img {width: 100%;}
+/* 5. 마무리 */
+.last h1 {
+    text-align: center;
+    font-size: 10rem;
+}
+/* 풀페이지 네비 */
+#fp-nav ul li a {
+    cursor: pointer;
+}
+#fp-nav ul li a span {
+    background-color: #c4c4c4;
+    cursor: pointer;
+}
+#fp-nav ul li a.active span {
+    background-color: #121212;
+    cursor: pointer;
+}
+#fp-nav.right {
+    right: 60px;
+}
+#fp-nav {
+    top: 85%;
 }
